fix/ui, make disabled btns without information

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -140,9 +140,9 @@ table {
     border-spacing: 0;
 }
 .app-wrapper{
-    width: 500px;
+    width: 450px;
     margin: 0 auto;
-    padding: 150px 0;
+    margin-bottom: 150px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -151,11 +151,14 @@ table {
 form{
     width: 100%;
     display: flex;
+    justify-content: space-between;
+    align-items: baseline;
     margin-bottom: 50px;
-   
 }
+
 .progress{
     width: 100%;
+    margin-bottom: 150px;
 }
 
 .download-icon{
@@ -177,12 +180,10 @@ svg path{
     fill: #fff;
 }
 .download-field-wrap{
-    width: 40%;
+    width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 55px;
-    margin-left: 55px;
 }
 input[type='file']{
     display: none;
