--- a/src/css/style.css
+++ b/src/css/style.css
@@ -141,6 +141,7 @@ table {
 }
 .app-wrapper{
     width: 450px;
+    position: relative;
     margin: 0 auto;
     margin-bottom: 150px;
     display: flex;
@@ -235,4 +236,57 @@ input[type='file']{
 .download-img-wrap img{
     width: 100%;
     height: auto;
+}
+.download-list-wrap{
+    width: 50%;
+    /* opacity: 0; */
+    position: absolute;
+    top: 50px;
+    left: 100%;
+    transform: translate(25%, 0);
+    transition: .3s linear;
+}
+.download-list{
+    width: 100%;
+    opacity: 0;
+    transition: .3s linear;
+}
+.download-list-wrap.active .download-list{
+border: 1px solid rgb(224, 222, 222);
+opacity: 1;
+border-radius: 5px;
+padding: 10px 5px;
+background: rgba(0, 0, 0, .7);
+}
+.download-list-wrap span{
+    display: none;
+    position: absolute;
+    top: -38px;
+    left: -4px;
+    cursor: pointer;
+    transition: .3s linear;
+}
+.download-list-wrap span:hover{
+    color: #ff0000;
+}
+.download-list-wrap.active span{
+    display: block;
+}
+
+.download-list-wrap.active svg .lines-list{
+    opacity: 0;
+}
+
+.download-list-wrap svg{
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    opacity: 1;
+    position: absolute;
+    top: -15px;
+    left: 0;
+    transform: translate(-50%, -100%);
+}
+.download-list-wrap svg:hover path{
+   fill: rgb(224, 222, 222);
 }
