--- a/src/css/style.css
+++ b/src/css/style.css
@@ -143,7 +143,6 @@ table {
     width: 450px;
     position: relative;
     margin: 0 auto;
-    margin-bottom: 150px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -159,7 +158,7 @@ form{
 
 .progress{
     width: 100%;
-    margin-bottom: 150px;
+    margin-bottom: 80px;
 }
 
 .download-icon{
@@ -230,7 +229,7 @@ input[type='file']{
     background-color: #8a2121;
 }
 .download-img-wrap{
-    width: 100%;
+    height: 300px;
     margin: 0 auto;
     position: relative;
     display: none;
@@ -259,8 +258,8 @@ input[type='file']{
     transform: scale(1);
 }
 .download-img-wrap img{
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
 }
 .download-list-wrap{
     width: 50%;
