--- a/src/css/style.css
+++ b/src/css/style.css
@@ -156,6 +156,10 @@ form{
     margin-bottom: 50px;
 }
 
+.upload-form{
+    margin-bottom: 20px;
+}
+
 .progress{
     width: 100%;
     margin-bottom: 80px;
@@ -227,6 +231,26 @@ input[type='file']{
 .progress{
     height: 10px;
     background: transparent;
+}
+.upload-progress-wrap{
+    width: 450px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    height: 20px;
+}
+.progress-bar-upload{
+    position: relative;
+    background-color: #8a2121;
+}
+.procentage-progress{
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.procentage-progress.active{
+    opacity: 1;
 }
 .progress-bar{
     background-color: #8a2121;
