--- a/src/css/style.css
+++ b/src/css/style.css
@@ -231,6 +231,7 @@ input[type='file']{
 .progress{
     height: 10px;
     background: transparent;
+    transition: .3s linear;
 }
 .upload-progress-wrap{
     width: 450px;
@@ -242,16 +243,16 @@ input[type='file']{
     position: relative;
     background-color: #8a2121;
 }
-.procentage-progress{
-    opacity: 0;
+.percentage-progress{
+    /* opacity: 0; */
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.procentage-progress.active{
+/* .percentage-progress.active{
     opacity: 1;
-}
+} */
 .progress-bar{
     background-color: #8a2121;
 }
@@ -290,7 +291,6 @@ input[type='file']{
 }
 .download-list-wrap{
     width: 50%;
-    /* opacity: 0; */
     position: absolute;
     top: 50px;
     left: 100%;
@@ -298,9 +298,21 @@ input[type='file']{
     transition: .3s linear;
 }
 .download-list{
-    width: 100%;
+    width: 70%;
     opacity: 0;
     transition: .3s linear;
+}
+.download-list li{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    cursor: pointer;
+    line-height: 20px;
+    text-indent: 10px;
+    transition: .3s linear;
+}
+.download-list li:hover{
+    color: #8a2121;
 }
 .download-list-wrap.active .download-list{
 border: 1px solid rgb(224, 222, 222);
@@ -313,7 +325,7 @@ background: rgba(0, 0, 0, .7);
     display: none;
     position: absolute;
     top: -38px;
-    left: -4px;
+    left: 9px;
     cursor: pointer;
     transition: .3s linear;
 }
@@ -335,9 +347,53 @@ background: rgba(0, 0, 0, .7);
     opacity: 1;
     position: absolute;
     top: -15px;
-    left: 0;
+    left: 13px;
     transform: translate(-50%, -100%);
 }
 .download-list-wrap svg:hover path{
    fill: rgb(224, 222, 222);
 }
+
+
+/* ===================================== */
+/* =============----info-block---========== */
+.info-block{
+    position: fixed;
+    opacity: 0;
+    top: 50px;
+    left: 50px;
+    width: 150px;
+    border-radius: 5px;
+    background: rgba(255, 255, 255, .5);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid #ff0000;
+    transition: .3s linear;
+}
+.info-block.active{
+    opacity: 1;
+}
+.info-block .info-block-title{
+    color: #ff0000;
+    font-size: 20px;
+    line-height: 35px;
+    border-bottom: 1px solid #000;
+    width: 100%;
+    text-align: center;
+}
+.info-block-title h2{
+    display: inline-block;
+}
+.info-block-icon{
+    display: inline-block;
+}
+.info-block-icon.hidden{
+    display: none;
+}
+.info-block p{
+    color: #fff;
+    padding: 10px 5px;
+}
+/* ===================================== */
